# taskq-rs

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .typos.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GLOSSARY.md  LICENSE  OPERATIONS.md  README.md  architecture.md  audit.toml  design.md  tasks.md
.codex/rules/shared/: AGENTS.md
.codex/rules/shared/api/: aipdev.md  docsguide.md
.codex/rules/shared/common/: ci-verification.md  code-standards.md  dependency-management.md  di-non-deterministic.md  large-refactor.md  rust-quality.md  spanner-schemas.md  testing-patterns.md
.codex/rules/shared/workflows/: agent-driven-learning.md  beu-workflow.md  session-management.md
.github/workflows/: ci.yml
codelabs/: 01-build-a-worker-in-50-lines.md  02-migrating-a-postgres-queue-service.md  03-operating-taskq-rs.md
dashboards/: README.md  grafana-overview.json
docker/: Dockerfile.cp  compose.base.yml  compose.multi-cp.yml  cp-config.toml
problems/: 01-lease-expiration.md  02-crash-consistency.md  03-idempotency.md  05-dispatch-fairness.md  06-backpressure.md  07-long-poll.md  08-retry-storms.md  09-versioning.md  10-noisy-neighbor.md  11-observability.md  12-storage-abstraction.md  README.md
protocol/: EVOLUTION.md  QUOTAS.md
taskq-caller-sdk/: Cargo.toml  README.md
taskq-caller-sdk/src/: error.rs  hash.rs  lib.rs  request.rs  retry.rs  trace.rs
taskq-caller-sdk/tests/: smoke.rs
taskq-cli/: Cargo.toml  README.md
taskq-cli/src/: cli.rs  commands.rs  connect.rs  error.rs  main.rs  output.rs
taskq-cli/tests/: cli.rs
taskq-cp/: Cargo.toml  README.md
taskq-cp/src/: audit.rs  audit_pruner.rs  config.rs  error.rs  health.rs  lib.rs  main.rs  metrics_refresher.rs  observability.rs  reapers.rs  server.rs  shutdown.rs  state.rs
taskq-cp/src/handlers/: cancel.rs  mod.rs  retry.rs  task_admin.rs  task_queue.rs  task_worker.rs
taskq-cp/src/strategy/: admitter.rs  dispatcher.rs  mod.rs
taskq-e2e-tests/: Cargo.toml
taskq-e2e-tests/src/: lib.rs
taskq-e2e-tests/tests/: e01_happy_path.rs  e02_multi_replica.rs  e03_worker_crash.rs  e04_schema_handshake.rs  e05_cli_golden.rs  e06_cp_restart.rs  e07_quota_concurrency.rs  e08_idempotency_wire.rs  e09_purge_admin.rs  e10_llm_workload.rs
taskq-integration-tests/: Cargo.toml  README.md
taskq-integration-tests/src/: lib.rs
taskq-integration-tests/tests/: admin.rs  idempotency.rs  lifecycle.rs  observability.rs  reaper.rs  retry.rs
taskq-proto/: Cargo.toml  build.rs
taskq-proto/schema/: common.fbs  task_admin.fbs  task_queue.fbs  task_worker.fbs
taskq-proto/src/: lib.rs
taskq-storage/: Cargo.toml
taskq-storage-conformance/: Cargo.toml
taskq-storage-conformance/src/: bounded_dedup_cleanup.rs  conditional_insert.rs  expire_stale.rs  external_consistency.rs  helpers.rs  lib.rs  range_scans.rs  retry_progression.rs  skip_locking.rs  subscribe_ordering.rs
taskq-storage-postgres/: Cargo.toml  README.md
taskq-storage-postgres/migrations/: 0001_initial.sql  0002_phase5c_admin.sql
taskq-storage-postgres/src/: errors.rs  lib.rs  listener.rs  migrate.rs  rate.rs  storage.rs  tx.rs
taskq-storage-postgres/tests/: admin.rs  conformance.rs  smoke.rs
taskq-storage-sqlite/: Cargo.toml  README.md
taskq-storage-sqlite/migrations/: 0001_initial.sql  0002_phase5c_admin.sql
taskq-storage-sqlite/src/: convert.rs  lib.rs  migrate.rs  storage.rs  tx.rs
taskq-storage-sqlite/tests/: conformance.rs  smoke.rs
taskq-storage/src/: error.rs  ids.rs  lib.rs  traits.rs  types.rs
taskq-worker-sdk/: Cargo.toml  README.md
taskq-worker-sdk/src/: builder.rs  error.rs  error_class.rs  handler.rs  lib.rs  runtime.rs  shutdown.rs  trace.rs
