[package]
name = "taskq-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "FlatBuffers-generated wire bindings and helpers for the taskq-rs gRPC contract"
publish = false

[dependencies]
# Runtime crate that the generated readers/builders depend on. Pinned to the
# same major shipped by flatbuffers-rs codegen so wire-format constants line up.
flatbuffers = "25"

[build-dependencies]
# `grpc-build`'s `flatbuffers` feature drives the FlatBuffers compile + Rust
# message-type codegen via `compile_fbs`. Pinned to the same `pure-grpc-rs`
# revision the rest of the workspace consumes (`taskq-cp`).
grpc-build = { git = "https://github.com/Shuozeli/pure-grpc-rs.git", rev = "120046b9a233139c13452aae37742a1890728d25", default-features = false, features = ["flatbuffers"] }
