[package]
name = "taskq-storage-conformance"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared conformance test suite that every taskq-rs storage backend must pass"
publish = false

[dependencies]
# The trait surface under test.
taskq-storage = { path = "../taskq-storage" }
# Async test runtime. `rt` + `macros` for `#[tokio::test]`; `test-util` lets
# tests pause/advance time without sleeping when the suite needs it.
tokio = { version = "1", features = ["rt", "macros", "test-util"] }
